tests/ui/codemap_tests/coherence-overlapping-inherent-impl-trait.rs
#![allow(dead_code)]

trait C {}
impl dyn C { fn f() {} } //~ ERROR duplicate
impl dyn C { fn f() {} }
fn main() { }
